feat(scripts): add npm run install for skill sync

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "node scripts/clean.js",
     "build": "npm run clean && tsc -p tsconfig.json",
     "sync-skill": "node scripts/sync-skill-long-term-plan.js",
+    "install": "npm run build && npm run sync-skill",
     "start": "node dist/cli.js",
     "test": "npm run build && node --test"
   },
