refactor(skills): move skill to agent-skill

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,8 @@ dist/
 .tmp-long-term-plan-*
 .tmp-ltp-smoke-*
 
-# Local agent config (keep versioned skills)
+# Local agent config (skills live in `agent-skill/`)
 .codex/*
-!.codex/skills/
-!.codex/skills/**
 
 # Logs
 npm-debug.log*
