chore(gitignore): ignore tmp symlink dirs

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ dist/
 .tmp/
 .tmp-long-term-plan-*
 .tmp-ltp-smoke-*
+.tmp-symlink-*
 
 # Local agent config (skills live in `agent-skill/`)
 .codex/*
